# Ironman

./: .gitignore
Calibration/: Calibration.sln  VID5.xml
Calibration/Calibration/: Calibration.cpp  Calibration.vcxproj  Calibration.vcxproj.filters  default.xml  out_camera_data.xml
Calibration/Calibration/back/: out_camera_data.xml  out_camera_data_old.xml
Calibration/Calibration/x64/Debug/: vc140.idb
Calibration/Calibration/x64/Debug/Calibration.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Calibration.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Calibration/x64/Debug/: Calibration.ilk
VRWorks_360_Video_SDK_1.1/: CMakeLists.txt
VRWorks_360_Video_SDK_1.1/footage/: README.txt  audio_rig_spec.xml  input1.pcm  input2.pcm  rig_spec.xml  sample_calib_rig_spec.xml  stitcher_spec.xml  stitcher_spec_host_buffer.xml  video_input.xml
VRWorks_360_Video_SDK_1.1/kodak/: image_input.xml  sample_calib_rig_spec.xml
VRWorks_360_Video_SDK_1.1/kodak/back/: calib_rig_spec.xml  calib_rig_spec_old.xml  rig_spec_2.xml
VRWorks_360_Video_SDK_1.1/kodak_gstreamer/: calib_rig_spec.xml  image_input.xml  nvss_sample.ilk  rig_spec.xml  run_mono.bat  run_test.bat
VRWorks_360_Video_SDK_1.1/kodak_gstreamer/back/: calib_rig_spec.xml
VRWorks_360_Video_SDK_1.1/kodak_gstreamer/back_worked/: calib_rig_spec.xml
VRWorks_360_Video_SDK_1.1/nvcalib/: CMakeLists.txt  README.txt  ThirdPartyLicenses.txt
VRWorks_360_Video_SDK_1.1/nvcalib/include/: calibration_api.h  nvstitch_common.h
VRWorks_360_Video_SDK_1.1/nvstitch/: CMakeLists.txt  README.txt  ThirdPartyLicenses.txt
VRWorks_360_Video_SDK_1.1/nvstitch/include/: nvsf.h  nvss_video.h  nvstitch.h  nvstitch_common_audio.h  nvstitch_common_video.h
VRWorks_360_Video_SDK_1.1/samples/: CMakeLists.txt  README.txt  ThirdPartyLicenses.txt  run.bat
VRWorks_360_Video_SDK_1.1/samples/common/: CmdArgsMap.hpp  filesys_util.cpp  filesys_util.h  image_io_util.hpp
VRWorks_360_Video_SDK_1.1/samples/nvcalib_sample/: CMakeLists.txt  README.txt  nvcalib_sample_app.cpp  run.bat
VRWorks_360_Video_SDK_1.1/samples/nvsf_sample/: CMakeLists.txt  README.txt  fp32pcm.hpp  nvsf_sample.cpp  run.bat
VRWorks_360_Video_SDK_1.1/samples/nvss_sample/: CMakeLists.txt  README.txt  app.cpp  app.h  main.cpp  run.bat  run_kodak.bat  run_mono.bat
VRWorks_360_Video_SDK_1.1/samples/nvstitch_sample/: CMakeLists.txt  README.txt  app.cpp  app.h  main.cpp  run.bat
VRWorks_360_Video_SDK_1.1/samples/nvstitch_sample/back/: run.bat
VRWorks_360_Video_SDK_1.1/testVRWorks/: app.cpp  app.h  main.cpp  testVRWorks.vcxproj  testVRWorks.vcxproj.filters
VRWorks_360_Video_SDK_1.1/testVRWorks/x64/Release/testVRWorks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  testVRWorks.lastbuildstate  testVRWorks.write.1u.tlog
VRWorks_360_Video_SDK_1.1/utilities/: CMakeLists.txt
VRWorks_360_Video_SDK_1.1/utilities/math_util/: math_utility.cpp  math_utility.h  polynomial.cpp  polynomial.h
VRWorks_360_Video_SDK_1.1/utilities/xml_util/: xml_utility_audio.h  xml_utility_audio_rig.cpp  xml_utility_camera_rig.cpp  xml_utility_common.cpp  xml_utility_common.h  xml_utility_hl.cpp  xml_utility_hl.h  xml_utility_video.h
